redesigning URL stubbing